ros2_truckplatoon/log/build_2022-10-30_15-55-15/truck/stdout_stderr.log
Scanning dependencies of target truck
[ 16%] Building CXX object CMakeFiles/truck.dir/src/src/Truck.cpp.o
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.cpp:1:
/Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.hpp:4:10: warning: non-portable path to file '"utils/include.hpp"'; specified path differs in case from file name on disk [-Wnonportable-include-path]
#include "utils/Include.hpp"
         ^~~~~~~~~~~~~~~~~~~
         "utils/include.hpp"
/Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.cpp:32:21: error: no member named 'PublishTopic' in 'std::shared_ptr<Publisher>'; did you mean to use '->' instead of '.'?
    this->_publisher.PublishTopic("Ciao")
                    ^
                    ->
/Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.cpp:32:42: error: expected ';' after expression
    this->_publisher.PublishTopic("Ciao")
                                         ^
                                         ;
1 warning and 2 errors generated.
gmake[2]: *** [CMakeFiles/truck.dir/build.make:95: CMakeFiles/truck.dir/src/src/Truck.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:97: CMakeFiles/truck.dir/all] Error 2
gmake: *** [Makefile:160: all] Error 2
